--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
 		"typescript-svelte-plugin": "^0.3.39",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@vercel/analytics": "^1.3.1"
+	}
 }
