--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@sveltejs/adapter-vercel": "^5.4.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@tailwindcss/typography": "^0.5.13",
 		"@types/eslint": "^8.56.7",
 		"autoprefixer": "^10.4.19",
 		"carbon-icons-svelte": "^12.10.0",
@@ -40,6 +41,13 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@vercel/analytics": "^1.3.1"
+		"@ethercorps/sveltekit-og": "^3.0.0",
+		"@vercel/analytics": "^1.3.1",
+		"bits-ui": "^0.21.13",
+		"clsx": "^2.1.1",
+		"lucide-svelte": "^0.436.0",
+		"marked": "^13.0.3",
+		"tailwind-merge": "^2.4.0",
+		"tailwind-variants": "^0.2.1"
 	}
 }
