--- a/package.json
+++ b/package.json
@@ -42,11 +42,14 @@
 	"type": "module",
 	"dependencies": {
 		"@ethercorps/sveltekit-og": "^3.0.0",
+		"@resvg/resvg-js": "^2.6.2",
 		"@vercel/analytics": "^1.3.1",
 		"bits-ui": "^0.21.13",
 		"clsx": "^2.1.1",
 		"lucide-svelte": "^0.436.0",
 		"marked": "^13.0.3",
+		"satori": "^0.10.14",
+		"satori-html": "^0.3.2",
 		"tailwind-merge": "^2.4.0",
 		"tailwind-variants": "^0.2.1"
 	}
