--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@tailwindcss/typography": "^0.5.13",
 		"@types/eslint": "^8.56.7",
+		"@types/three": "^0.168.0",
 		"autoprefixer": "^10.4.19",
 		"carbon-icons-svelte": "^12.10.0",
 		"eslint": "^9.0.0",
@@ -45,12 +46,14 @@
 		"@resvg/resvg-js": "^2.6.2",
 		"@vercel/analytics": "^1.3.1",
 		"bits-ui": "^0.21.13",
+		"carta-md": "^4.4.5",
 		"clsx": "^2.1.1",
 		"lucide-svelte": "^0.436.0",
 		"marked": "^13.0.3",
 		"satori": "^0.10.14",
 		"satori-html": "^0.3.2",
 		"tailwind-merge": "^2.4.0",
-		"tailwind-variants": "^0.2.1"
+		"tailwind-variants": "^0.2.1",
+		"three": "^0.168.0"
 	}
 }
